# ragline

./: .claude-commit-template  .env.example  .gitconfig.local  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENT_A_TASK_COMPLETION_SUMMARY.md  AGENT_B_SUMMARY.py  CLAUDE.md  CODEOWNERS  Makefile  QUICK_REFERENCE.md  README.md  SSE_VALIDATION_SUMMARY.md  TASK_3_FINAL_VALIDATION.md  WEBSOCKET_VALIDATION_SUMMARY.md  demo_redis_streams.py  docker-compose-db.yml  justfile  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  test_api_endpoints.py  test_celery.py  test_ci_validation.py  test_final_clean.py  test_health_tasks.py  test_jwt_auth.py  test_llm_client.py  test_production_readiness.py  test_rag_demo.py  test_redis_basic.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml  contracts.yml
agent-scopes/: AGENT_A_SCOPE.md  AGENT_B_SCOPE.md  AGENT_C_SCOPE.md  CLAUDE_AGENT_A.md  CLAUDE_AGENT_B.md  CLAUDE_AGENT_C.md
contracts/: openapi.json  openapi.yaml
contracts/events/: chat_tool_v1.json  order_v1.json  tool_execution_v1.json
demos/: __init__.py  demo_event_schemas.py  demo_notifications.py  demo_outbox_consumer.py  demo_redis_streams.py
docs/: 21DAY_SCHEDULE.md  7DAY_SCHEDULE.md  ARCHITECTURE.md  DAILY_STATUS.md  DATABASE_SETUP.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SYSTEM_IMPROVEMENTS.md  GIT_HOOKS.md  RAG_ARCHITECTURE.md  TECHNICAL_DEBT.md
ops/: docker-compose.yml  prometheus.yml
scripts/: daily_workflow.sh  generate_openapi.py  merge_workflow.sh  progress_plain.sh  setup-git-hooks.sh  test_agent_detection.sh  track_progress.sh
services/: __init__.py
services/api/: __init__.py  main.py
services/llm/: __init__.py  (+2 more)
tests/: README.md  __init__.py  run_all.py  run_tests.py
(+69 files in other folders)
