[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragline"
version = "0.1.0"
description = "Streaming-first, multi-tenant Python backend with LLM/RAG capabilities"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "services*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120  # Increased from 88 to reduce line length issues
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = [
    "C901",  # Temporarily ignore complexity issues
    "E501"   # Temporarily ignore line length issues
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = "packages:services"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
